--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -1,14 +1,10 @@
 <div style="background-color:#f1f1f1;margin:20px;padding:20px;font-size:19px;width:60%;margin:auto;">
   <p>
     Hello {{ user.firstname }},<br /><br />
-    To reset your password, please visit the link below:
+    To reset your password, please use the verification code below:
   </p>
 
-  <a
-    style="display:inline-block;text-decoration:none;margin:10px 0;background-color:#4CAF50;padding:10px;color:#fff"
-    href="{{ url_for('api_blueprint.Users_password_reset_resource', token=token, _external=True) }}"
-    >Reset Password</a
-  >
+  <p style="font-size:24px;font-weight:bold;">{{ user.reset_code }}</p>
 
   <p>If you did not make this request then simply ignore this email and no changes will be made.</p><br/>
   <strong>Dash Shop</strong>
